k8s/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-docker-nodeport
spec:
  type: NodePort
  selector:
    app: spring-docker
  ports:
    - port: 80
      targetPort: 9100
      nodePort: 30007
