k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-docker
spec:
  selector:
    app: spring-docker
  ports:
  - protocol: TCP
    port: 80
    targetPort: 9100
